--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit-mock:2.7.1'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.7.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.7.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
@@ -59,7 +60,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     testImplementation 'junit:junit:4.12'
